<?xml version="1.0"?>
<package format="3">
  <name>content_node</name>
  <version>0.0.0</version>
  <description>ROS node to publish a transform based on geometry_msgs/PointStamped messages</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>iqs_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
